--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,27 @@
 .envrc
 .erlang/
+.cache/
+compile_commands.json
+priv/
+
+# rebar3 .gitignore
+.rebar3
+_build
+_checkouts
+_vendor
+.eunit
+*.o
+*.beam
+*.plt
+*.swp
+*.swo
+.erlang.cookie
+ebin
+log
+erl_crash.dump
+.rebar
+logs
+.idea
+*.iml
+rebar3.crashdump
+*~
