--- a/rebar.config
+++ b/rebar.config
@@ -1,5 +1,11 @@
 {erl_opts, [debug_info]}.
 {deps, []}.
+{project_plugins, [rebar3_ex_doc]}.
+{hex, [{doc, ex_doc}]}
+{ex_doc, [
+          {source_url, <<"https://github.com/steinuil/fanotify-erl">>},
+          {extras, [<<"README.md">>, <<"LICENSE">>]},
+          {main, <<"readme">>}]}.
 
 {pre_hooks,
   [{"(linux)", compile, "make -C c_src"}]}.
