add documentation to the module

--- a/rebar.config
+++ b/rebar.config
@@ -1,7 +1,7 @@
 {erl_opts, [debug_info]}.
 {deps, []}.
 {project_plugins, [rebar3_ex_doc]}.
-{hex, [{doc, ex_doc}]}
+{hex, [{doc, ex_doc}]}.
 {ex_doc, [
           {source_url, <<"https://github.com/steinuil/fanotify-erl">>},
           {extras, [<<"README.md">>, <<"LICENSE">>]},
